# mf_jupyter

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  SECURITY.md  Untitled.ipynb  config.py  custom_filters.py  document_configuration.tex  ipython_notebook.py  notebook_macros  pyproject.toml  setup.py  setup_mpl.py
examples/: template_notebook.ipynb  vstprep.ipynb
mf_jupyter/: Makefile  __init__.py  bibtex.py  figrc.py  ipython_notebook.py  notebook_macros  startnew.py
mf_jupyter/templates/: README.rst  mf_aa.tplx  mf_article.tplx  mf_dpac.tplx  mf_emulateapj.tplx  mf_tufte.tplx
src/mf_jupyter/: __init__.py  config.py  convert.py  convert_cmd.py
src/mf_jupyter/matplotlib/: __init__.py  latex.py  solarize.py  tools.py
src/mf_jupyter/nbconvert/: __init__.py  config.py  convert.py
src/mf_jupyter/nbconvert/snakemake/: __init__.py  latex_workflow.py  snakefile.latex_template
src/mf_jupyter/nbconvert/templates/aa/: index.tex.j2
src/mf_jupyter/nbconvert/templates/dpac/: index.tex.j2
src/mf_jupyter/nbconvert/templates/emulateapj/: index.tex.j2
src/mf_jupyter/nbconvert/templates/mnras/: README.md  index.tex.j2
src/mf_jupyter/nbconvert/templates/tufte/: index.tex.j2
src/mf_jupyter/nbconvert/texlibs/texmf/cu8val/: _cu8_validation.sty  bibliography.bib
src/mf_jupyter/notebook/: __init__.py  jupyter.py  latex_macros  tools.py
src/mf_jupyter/templates/aa/: .README.md.swp  index.tex.j2
src/mf_jupyter/templates/dpac/: base.tex.j2  index.tex.j2
src/mf_jupyter/templates/mnras/: index.tex.j2
src/mf_jupyter/templates/tufte/: README.md  index.tex.j2
src/mf_jupyter/texlibs/texmf/: mf.sty
src/mf_jupyter/texlibs/texmf/cu8val/: _cu8_macros.sty  _cu8_macros_help.tex
src/mf_jupyter/texlibs/texmf/dpac/: dpacdoc.cls  gaia_livelink_valid.bib
templates/: mf_2colarticle.tplx  mf_aa.tplx  mf_dpac.tplx  mf_mnras.tplx
